refactor: use project languages instead of calling api (#963)